# zoo_reconstruction

./: .gitignore
colmap-lightglue/: colmap_lightglue.job  lightglue_match.py  pipeline_stationary_cameras.sh  test_handheld_only.job  test_handheld_only.sh
colmap/colmap_test_pipeline/: dense_handheld.job  dense_handheld.sh
colmap/lightglue_v1/: pipeline_stationary_cameras.sh
colmap/lightglue_v2/: colmap_lightglue.job  pipeline_stationary_cameras.sh  register_stationary.py
colmap/manual_registration/: annotate_points.py  colmap_dense.job  colmap_manual.job  correspondences.json  main.py  pipeline_dense.sh  pipeline_manual.sh  pyproject.toml  register_manual.py  visualize_reprojections.py
rhino-tracking/: check_image_sizes.py  extract_video_frames.py  pyproject.toml  requirements.txt  resize_rhino_frames.py
rhino-tracking/src/: __init__.py  bbox_parser.py  camera_parser.py  data_structures.py  mesh_intersection.py  ray_casting.py
