[project]
name = "rhino-3d-tracking"
version = "0.1.0"
description = "Rhino 3D tracking and reconstruction using COLMAP and ray-mesh intersection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # Computer vision & video processing
    "opencv-python>=4.8.0",

    # 3D processing and visualization
    "trimesh>=4.0.0",
    "open3d>=0.17.0",

    # Data analysis and visualization
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
colmap = [
    "pycolmap>=0.5.0",
]
viz = [
    "pyvista>=0.42.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"]
